# outlook_extractor

./: .gitignore  README.md  main.py  pyproject.toml
extractor/: app.py  app_config.py  auth.py
extractor/app/: __init__.py  auth.py  models.py  routes.py
extractor/app/static/: style.css
extractor/app/templates/: auth_error.html  base.html  downloads.html  index.html  login.html
extractor/graph_email/: __init__.py
extractor/models/: __init__.py
extractor/static/: style.css
extractor/templates/: base.html  downloads.html  email_folders.html  index.html
extractor/utils/: __init__.py
