[tool.poetry]
name = "outlook_extractor"
version = "0.1.0"
description = ""
authors = ["Jeferson Machado <jeferson_m94@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
msal = "^1.21.0"
Flask = "^2.2.2"
Flask-Session = "^0.4.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
